syntax = "proto3";
option go_package = "ShortCx/shortcut";
package protos;

import "apiservice.proto";

service ShortcutService {
    rpc CreateShortcut (InternalCreateShortcutRequest) returns (CreateShortcutResponse) {}
    rpc DeleteShortcut (InternalDeleteShortcutRequest) returns (DeleteShortcutResponse) {}
    rpc GetShortcut (GetShortcutRequest) returns (GetShortcutResponse) {}
}

message InternalCreateShortcutRequest {
    int32 auth_user_id = 1;
    string target_url = 2;
}

message InternalDeleteShortcutRequest {
    int32 auth_user_id = 1;
    string url_token = 2;
}